Implement convenience wrapper for dumping object graphs

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,9 @@
   "autoload-dev": {
     "classmap": [
       "tests/_fixture/"
+    ],
+    "files": [
+      "src/functions.php"
     ]
   },
     "extra": {
