--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   },
   "prefer-stable": true,
   "require": {
-    "php": "^7.4",
+    "php": ">=7.4",
     "sebastian/object-enumerator": "^4.0",
     "sebastian/object-reflector": "^2.0"
   },
