--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,14 @@
-/.github        export-ignore
-/.php_cs.dist   export-ignore
-/.psalm         export-ignore
-/build.xml      export-ignore
-/phive.xml      export-ignore
-/phpunit.xml    export-ignore
-/tests          export-ignore
-/tools          export-ignore
-/tools/*        binary
+/.github                export-ignore
+/.phive                 export-ignore
+/.psalm                 export-ignore
+/example                export-ignore
+/tools                  export-ignore
+/tools/*                binary
+/tests                  export-ignore
+/.gitattributes         export-ignore
+/.gitignore             export-ignore
+/.php-cs-fixer.dist.php export-ignore
+/build.xml              export-ignore
+/phpunit.xml            export-ignore
 
 *.php diff=php
